Not constraint implemented

--- a/src/components/editor/editableConstraint.html
+++ b/src/components/editor/editableConstraint.html
@@ -18,6 +18,7 @@
       <select class="form-control" ng-model="ctrl.constraint.constraint" style="height: 39px">
         <option value="or">Or</option>
         <option value="and">And</option>
+        <option value="not">Not</option>
       </select>
     </div>
     <div class="form-control multi-input" style="max-width: 415px">
