--- a/src/components/model/requiresView.html
+++ b/src/components/model/requiresView.html
@@ -1,5 +1,7 @@
 <h4 translate>Imported requires</h4>
 
+<p ng-if="ctrl.requires.length === 0" translate>No requires yet</p>
+
 <uib-accordion>
   <uib-accordion-group ng-repeat="require in ctrl.requires" is-open="ctrl.opened[$index]">
     <uib-accordion-heading>
@@ -23,3 +25,4 @@
     </editable>
   </uib-accordion-group>
 </uib-accordion>
+
