--- a/src/components/model/model.html
+++ b/src/components/model/model.html
@@ -13,10 +13,10 @@
           <button ng-show="ctrl.canEdit()" type="button" class="btn btn-default btn-md add-new-button" ng-click="tab.addNew()">{{tab.addLabel | translate}}</button>
 
           <ul class="panel__list" ng-class="{'has-button': ctrl.canEdit()}">
-            <li ng-repeat="item in tab.items() | orderByLabel"
+            <li ng-repeat="item in tab.items()"
                 ng-class="{'model-panel__selection': ctrl.isSelected(item)}"
                 ng-click="ctrl.select(item)">
-              {{item | translateLabel}}
+              {{item.label}}
             </li>
           </ul>
         </uib-tab>
