--- a/src/components/editor/addConceptModal.html
+++ b/src/components/editor/addConceptModal.html
@@ -23,16 +23,18 @@
       </editable>
 
       <editable title="Broader concept">
-        <input id="concept"
-               type="text"
-               class="form-control"
-               iow-typeahead
-               selection-mapper="ctrl.mapSelection"
-               options="ctrl.options"
-               datasets="ctrl.dataset"
-               ng-model="ctrl.broaderConcept"
-               placeholder="{{'Search from concept database' | translate}}"/>
-        <i class="glyphicon glyphicon-search form-control-feedback"></i>
+        <div class="input-group">
+          <input id="concept"
+                 type="text"
+                 class="form-control"
+                 iow-typeahead
+                 selection-mapper="ctrl.mapSelection"
+                 options="ctrl.options"
+                 datasets="ctrl.dataset"
+                 ng-model="ctrl.broaderConcept"
+                 placeholder="{{'Search from concept database' | translate}}"/>
+          <i class="glyphicon glyphicon-search form-control-feedback"></i>
+        </div>
       </editable>
 
       <div ng-if="ctrl.broaderConcept">
