Link to browse vocabulary when vocabulary is selected in concept search dialog
Closes #265

--- a/src/components/editor/searchConceptModal.html
+++ b/src/components/editor/searchConceptModal.html
@@ -15,6 +15,8 @@
           </div>
         </div>
 
+        <a ng-show="ctrl.selectedReference" ng-href="{{ctrl.selectedReference.id}}" target="_blank" translate>Browse vocabulary</a>
+
         <editable title="Concept">
           <div class="input-group">
             <input id="concept"
