--- a/src/app.scss
+++ b/src/app.scss
@@ -39,14 +39,14 @@ $footer-height: 50px;
 .multi-input {
   border: 1px solid #ccc;
   height: auto !important;
-  min-height: 39px;
+  min-height: calc(#{$input-height-base} - 3px);
   padding: 0;
   display: inline-block;
   margin-bottom: -5px;
 
   .added-item {
     padding: 5px 4px;
-    margin: 6px 0 0 6px;
+    margin: 5px 0 0 5px;
     line-height: 12px;
     font-size: 12px;
     background-color: #f5f5f5;
@@ -222,9 +222,23 @@ form {
   }
 }
 
+$input-select: 80px;
+
+.input-select {
+  width: $input-select;
+}
+
 selection-view, .main-editable-content {
+
+  $max-width: 500px;
+
   .form-control {
-    max-width: 500px;
+    max-width: $max-width;
+
+    &.with-button {
+      max-width: calc(#{$max-width} - #{$input-select});
+      width: calc(100% - #{$input-select});
+    }
   }
 
   .collapsable {
