Use api parameter model instead of id when checking usages for model or profile

--- a/src/components/editor/classForm.html
+++ b/src/components/editor/classForm.html
@@ -62,4 +62,4 @@
 
 <h4 translate>Additional information</h4>
 
-<usage-panel id="ctrl.class.id"></usage-panel>
+<usage-panel entity="ctrl.class"></usage-panel>
