--- a/src/components/editor/predicateForm.html
+++ b/src/components/editor/predicateForm.html
@@ -36,4 +36,4 @@
 
 <h3 translate>Additional information</h3>
 
-<usage-panel id="ctrl.predicate.id"></usage-panel>
+<usage-panel entity="ctrl.predicate"></usage-panel>
