Show usages for model

--- a/src/components/model/modelView.html
+++ b/src/components/model/modelView.html
@@ -33,6 +33,9 @@
         <div class="col-md-5 col-md-offset-1">
           <references-view references="ctrl.editableInEdit.references"></references-view>
           <requires-view requires="ctrl.editableInEdit.requires"></requires-view>
+
+          <h4 translate>Additional information</h4>
+          <usage-panel entity="ctrl.model"></usage-panel>
         </div>
       </div>
     </fieldset>
