--- a/src/components/frontPage.html
+++ b/src/components/frontPage.html
@@ -2,7 +2,7 @@
 
   <div class="col-md-5">
 
-    <h2 translate>Interoperability method</h2>
+    <h2><span class="glyphicon glyphicon-retweet"></span><span translate>Interoperability method</span></h2>
 
     <div ng-repeat="bullet in ctrl.bullets" class="">
       
