--- a/src/components/user/user.html
+++ b/src/components/user/user.html
@@ -1,6 +1,6 @@
 <div ng-show="ctrl.user" class="col-md-5">
 
-  <h2 translate>User details</h2>
+  <h2><span class="glyphicon glyphicon-user"></span><span translate>User details</span></h2>
 
   <form>
     <div>
