Minor style change

--- a/src/app.scss
+++ b/src/app.scss
@@ -750,6 +750,9 @@ a.accordion-toggle {
   .link {
     text-decoration: none;
   }
+  .glyphicon {
+    margin-right: 7px;
+  }
 }
 
 a.accordion-toggle {
