--- a/src/components/editor/predicateView.html
+++ b/src/components/editor/predicateView.html
@@ -4,6 +4,7 @@
       <selection-view editable-controller="ctrl" hide-visualization="true">
         <selection-buttons>
           <export ng-hide="ctrl.isEditing()" entity="ctrl.predicate"></export>
+          <history model="ctrl.model" resource="ctrl.predicate" ng-hide="ctrl.isEditing()"></history>
         </selection-buttons>
         <selection-content>
           <predicate-form predicate="ctrl.editableInEdit" old-predicate="ctrl.predicate" model="ctrl.model"></predicate-form>
