--- a/src/components/model/modelView.html
+++ b/src/components/model/modelView.html
@@ -11,6 +11,7 @@
           <button type="button" class="btn btn-default right" ng-click="ctrl.addRequire()" ng-show="ctrl.canModify()" translate>Add require</button>
           <button type="button" class="btn btn-default right" ng-click="ctrl.addReference()" ng-show="ctrl.canModify()" translate>Add reference</button>
           <export ng-hide="ctrl.isEditing()" entity="ctrl.model"></export>
+          <history model="ctrl.model" resource="ctrl.model" ng-hide="ctrl.isEditing()"></history>
         </editable-entity-buttons>
 
         <model-form model="ctrl.editableInEdit"></model-form>
