--- a/src/components/editor/editableMultipleCurieSelect.html
+++ b/src/components/editor/editableMultipleCurieSelect.html
@@ -27,6 +27,6 @@
       </div>
     </error-messages>
 
-    <button ng-show="ctrl.isEditing()" type="button" class="btn btn-default btn-sm" style="display: block" ng-click="ctrl.addCurie()">{{('Choose ' + ctrl.type) | translate}}</button>
+    <button ng-show="ctrl.isEditing()" type="button" class="btn btn-default btn-sm" style="display: block" ng-click="ctrl.addCurie()">{{('Choose ' + ctrl.normalizedType) | translate}}</button>
   </div>
 </div>
