Root class selection to model, select root class by default
Closes #283

--- a/src/components/model/modelForm.html
+++ b/src/components/model/modelForm.html
@@ -16,6 +16,8 @@
   <editable title="State" value-as-localization-key="true" ng-if="!ctrl.model.unsaved">
     <state-select id="modelState" state="ctrl.model.state" model="ctrl.model"></state-select>
   </editable>
+
+  <editable-root-class model="ctrl.model"></editable-root-class>
 </div>
 
 <div class="col-md-5 col-md-offset-1">
