Allow exlucsion of referrers not in given model

--- a/src/components/common/deleteConfirmationModal.html
+++ b/src/components/common/deleteConfirmationModal.html
@@ -2,9 +2,9 @@
   <modal-title translate>Confirm delete</modal-title>
   <modal-body>
 
-    <div ng-if="ctrl.usage && ctrl.usage.referrers.length > 0">
+    <div ng-if="ctrl.usage && ctrl.hasReferrers">
       <p><span translate>Following items are depending on the deleted</span> <span>{{'of ' + ctrl.entity.normalizedType | translate}}</span></p>
-      <usage usage="ctrl.usage"></usage>
+      <usage usage="ctrl.usage" exclude="ctrl.exclude"></usage>
       <br />
     </div>
 
