Form finto url from identifier instead of using id

--- a/src/components/editor/searchConceptModal.html
+++ b/src/components/editor/searchConceptModal.html
@@ -15,7 +15,7 @@
           </div>
         </div>
 
-        <a ng-show="ctrl.selectedReference" ng-href="{{ctrl.selectedReference.id}}" target="_blank" translate>Browse vocabulary</a>
+        <a ng-show="ctrl.selectedReference" ng-href="{{ctrl.selectedReference.href}}" target="_blank" translate>Browse vocabulary</a>
 
         <editable title="Concept">
           <div class="input-group">
