Localization: concept comment is definition, other comments are description

--- a/src/components/editor/addConceptModal.html
+++ b/src/components/editor/addConceptModal.html
@@ -10,7 +10,7 @@
         </div>
       </editable>
 
-      <editable title="Comment">
+      <editable title="Definition">
         <div class="input-group input-group-md">
           <textarea id="conceptComment" class="form-control" autofocus required string-input ng-model="ctrl.conceptComment"></textarea>
         </div>
@@ -41,7 +41,7 @@
         <label for="concept" translate>Chosen concept</label>
         <p>{{ctrl.broaderConcept | translateLabel}}</p>
 
-        <label for="concept" translate>Comment</label>
+        <label for="concept" translate>Definition</label>
         <p>{{ctrl.broaderConcept.comment | translateValue}}</p>
       </div>
 
