--- a/src/components/editor/classForm.html
+++ b/src/components/editor/classForm.html
@@ -9,7 +9,7 @@
   <input id="classId" class="form-control" type="text" required id-input="class" old="ctrl.oldClass" ng-model="ctrl.class.curie" ng-disabled="!ctrl.inUnstableState" />
 </editable>
 
-<editable title="Comment">
+<editable title="Description">
   <textarea id="classComment" class="form-control" localized-input ng-model="ctrl.class.comment"></textarea>
 </editable>
 
