--- a/src/components/editor/editableConstraint.html
+++ b/src/components/editor/editableConstraint.html
@@ -1,5 +1,5 @@
 
-<editable title="Constraint comment">
+<editable title="Constraint description">
   <textarea id="constraintComment" class="form-control" localized-input ng-model="ctrl.constraint.comment"></textarea>
 </editable>
 
