--- a/src/components/editor/predicateForm.html
+++ b/src/components/editor/predicateForm.html
@@ -8,7 +8,7 @@
   <input id="predicateId" class="form-control" type="text" required id-input="predicate" old="ctrl.oldPredicate" ng-model="ctrl.predicate.curie" ng-disabled="!ctrl.inUnstableState" />
 </editable>
 
-<editable title="Comment">
+<editable title="Description">
   <textarea id="predicateComment" class="form-control" localized-input ng-model="ctrl.predicate.comment"></textarea>
 </editable>
 
