--- a/src/components/editor/searchConceptModal.html
+++ b/src/components/editor/searchConceptModal.html
@@ -38,7 +38,7 @@
           <label for="concept" translate>Chosen concept</label>
           <p>{{ctrl.concept | translateLabel}}</p>
 
-          <label for="concept" translate>Comment</label>
+          <label for="concept" translate>Definition</label>
           <p>{{ctrl.concept.comment | translateValue}}</p>
         </div>
 
