--- a/src/components/editor/subjectView.html
+++ b/src/components/editor/subjectView.html
@@ -3,5 +3,5 @@
 <div class="model-view__sub">
   <non-editable title="Id" value="ctrl.subject.id" link="ctrl.subject.id"></non-editable>
   <non-editable title="Label" value="ctrl.subject.label"></non-editable>
-  <non-editable title="Comment" value="ctrl.subject.comment"></non-editable>
+  <non-editable title="Definition" value="ctrl.subject.comment"></non-editable>
 </div>
