--- a/src/components/group/group.html
+++ b/src/components/group/group.html
@@ -18,7 +18,7 @@
             <input id="groupLabel" class="form-control" type="text" localized-input="label" ng-model="ctrl.editableInEdit.label" />
           </editable>
 
-          <editable title="Comment">
+          <editable title="Description">
             <textarea id="groupComment" class="form-control" localized-input ng-model="ctrl.editableInEdit.comment"></textarea>
           </editable>
         </div>
