--- a/src/components/model/modelForm.html
+++ b/src/components/model/modelForm.html
@@ -9,7 +9,7 @@
   <non-editable title="Namespace" value="ctrl.model.namespace"></non-editable>
   <non-editable title="Prefix" value="ctrl.model.prefix"></non-editable>
 
-  <editable title="Comment">
+  <editable title="Description">
     <textarea id="modelComment" class="form-control" localized-input ng-model="ctrl.model.comment"></textarea>
   </editable>
 
