Change model to library

--- a/src/components/group/group.html
+++ b/src/components/group/group.html
@@ -9,7 +9,7 @@
       <div class="main-editable-content">
 
         <editable-entity-buttons editable-controller="ctrl">
-          <button type="button" class="btn btn-default right" ng-click="ctrl.addModel('model')" ng-if="ctrl.canAddModel()" translate>Add model</button>
+          <button type="button" class="btn btn-default right" ng-click="ctrl.addModel('library')" ng-if="ctrl.canAddModel()" translate>Add library</button>
           <button type="button" class="btn btn-default right" ng-click="ctrl.addModel('profile')" ng-if="ctrl.canAddModel()" translate>Add profile</button>
         </editable-entity-buttons>
 
