Better Uri, Urn, Url distinction
Always expect Uri to be either Urn, full Uri or compact Uri (curie).

Closes #291

--- a/src/components/editor/classForm.html
+++ b/src/components/editor/classForm.html
@@ -6,7 +6,7 @@
 </editable>
 
 <editable title="{{ctrl.class.normalizedType + ' id' | capitalize}}">
-  <input id="classId" class="form-control" type="text" required id-input="class" old="ctrl.oldClass" ng-model="ctrl.class.curie" ng-disabled="!ctrl.inUnstableState" />
+  <input id="classId" class="form-control" type="text" required id-input="class" old="ctrl.oldClass" ng-model="ctrl.class.id" ng-disabled="!ctrl.inUnstableState" />
 </editable>
 
 <editable title="Description">
