--- a/src/components/editor/predicateForm.html
+++ b/src/components/editor/predicateForm.html
@@ -5,7 +5,7 @@
 </editable>
 
 <editable title="{{ctrl.predicate.normalizedType + ' id' | capitalize}}">
-  <input id="predicateId" class="form-control" type="text" required id-input="predicate" old="ctrl.oldPredicate" ng-model="ctrl.predicate.curie" ng-disabled="!ctrl.inUnstableState" />
+  <input id="predicateId" class="form-control" type="text" required id-input="predicate" old="ctrl.oldPredicate" ng-model="ctrl.predicate.id" ng-disabled="!ctrl.inUnstableState" />
 </editable>
 
 <editable title="Description">
