--- a/src/components/editor/propertyView.html
+++ b/src/components/editor/propertyView.html
@@ -46,7 +46,7 @@
   <uib-accordion>
     <uib-accordion-group is-open="predicateOpen">
       <uib-accordion-heading>
-        <span accordion-chevron is-open="predicateOpen">{{ctrl.property.predicateCurie}}</span>
+        <span accordion-chevron is-open="predicateOpen">{{ctrl.property.predicate.compact}}</span>
       </uib-accordion-heading>
       <non-editable title="Name" value="ctrl.predicate.label"></non-editable>
       <non-editable title="Description" value="ctrl.predicate.comment"></non-editable>
