--- a/src/components/editor/subjectView.html
+++ b/src/components/editor/subjectView.html
@@ -1,7 +1,7 @@
 <label translate>Subject</label>
 <div ng-hide="ctrl.subject" translate>Not defined</div>
 <div class="model-view__sub">
-  <non-editable title="Id" value="ctrl.subject.id" link="ctrl.subject.id"></non-editable>
+  <non-editable title="Id" value="ctrl.subject.id.uri" link="ctrl.subject.id.url"></non-editable>
   <non-editable title="Label" value="ctrl.subject.label"></non-editable>
   <non-editable title="Definition" value="ctrl.subject.comment"></non-editable>
 </div>
