--- a/src/components/editor/classForm.html
+++ b/src/components/editor/classForm.html
@@ -14,11 +14,11 @@
 </editable>
 
 <editable ng-if="ctrl.class.isOfType('class')" title="Superclass" link="ctrl.linkToSuperclass()">
-  <curie-select id="superClass" type="class" curie="ctrl.class.subClassOf" model="ctrl.model" after-selected="ctrl.addPropertiesFromClass(id, 'super')"></curie-select>
+  <uri-select id="superClass" type="class" curie="ctrl.class.subClassOf" model="ctrl.model" after-selected="ctrl.addPropertiesFromClass(id, 'super')"></uri-select>
 </editable>
 
 <editable ng-if="ctrl.class.isOfType('shape')" title="Specialized from class" link="ctrl.linkToScopeclass()">
-  <curie-select id="scopeClass" type="class" curie="ctrl.class.scopeClass" model="ctrl.model" mandatory="true" after-selected="ctrl.addPropertiesFromClass(id, 'scope')"></curie-select>
+  <uri-select id="scopeClass" type="class" curie="ctrl.class.scopeClass" model="ctrl.model" mandatory="true" after-selected="ctrl.addPropertiesFromClass(id, 'scope')"></uri-select>
 </editable>
 
 <editable-multiple-curie-select id="equivalentClass" type="class" curies="ctrl.class.equivalentClasses" model="ctrl.model" title="{{'Equivalent class'}}" allow-input="true"></editable-multiple-curie-select>
