--- a/src/components/editor/editableMultipleUriSelect.html
+++ b/src/components/editor/editableMultipleUriSelect.html
@@ -1,32 +1,31 @@
 <div class="editable-wrap form-group">
   <label for="{{ctrl.id}}" ng-show="ctrl.title && (ctrl.items.length > 0 || ctrl.isEditing())">{{ctrl.title | translate}}</label>
 
-  <span ng-if="!ctrl.isEditing()" ng-repeat="item in ctrl.items">
+  <span ng-show="!ctrl.isEditing()" ng-repeat="item in ctrl.items">
     <span ng-show="item.showPlain">{{item.displayValue}}<span ng-if="!$last">, </span></span>
     <a ng-show="item.showLink" ng-href="{{item.href}}">{{item.displayValue}}<span ng-if="!$last">, </span></a>
   </span>
 
-  <div ng-if="ctrl.isEditing()">
-    <error-messages>
+  <div ng-show="ctrl.isEditing()">
       <div class="form-control multi-input">
         <div ng-repeat="item in ctrl.items" class="added-item">
           {{item.displayValue}}
-          <div class="delete-item badge" ng-click="ctrl.deleteCurie(item)">&times;</div>
+          <div class="delete-item badge" ng-click="ctrl.deleteUri(item)">&times;</div>
         </div>
 
-        <input name="curieInput"
+        <input name="uriInput"
                id="{{ctrl.id}}"
                curie-input
                model="ctrl.model"
                type="text"
-               restrict-duplicates="ctrl.curies"
-               ng-model="ctrl.curieInput"
+               restrict-duplicates="ctrl.uris"
+               ng-model="ctrl.uriInput"
                ng-keydown="ctrl.keyPressed($event)"
                ng-blur="ctrl.addCurieFromInput()"
-               ng-if="ctrl.allowInput" />
+               ng-show="ctrl.allowInput" />
       </div>
-    </error-messages>
+    <error-messages ng-model-controller="uriInputController"></error-messages>
 
-    <button ng-show="ctrl.isEditing()" type="button" class="btn btn-default btn-sm" style="display: block" ng-click="ctrl.addCurie()">{{('Choose ' + ctrl.type) | translate}}</button>
+    <button ng-show="ctrl.isEditing()" type="button" class="btn btn-default btn-sm" style="display: block" ng-click="ctrl.addUri()">{{('Choose ' + ctrl.type) | translate}}</button>
   </div>
 </div>
