Rename curieInput as uriInput

--- a/src/components/editor/editableMultipleUriSelect.html
+++ b/src/components/editor/editableMultipleUriSelect.html
@@ -15,7 +15,7 @@
 
         <input name="uriInput"
                id="{{ctrl.id}}"
-               curie-input
+               uri-input
                model="ctrl.model"
                type="text"
                restrict-duplicates="ctrl.uris"
