--- a/src/components/editor/uriSelect.html
+++ b/src/components/editor/uriSelect.html
@@ -1,2 +1,2 @@
-<input id="{{ctrl.id}}" type="text" class="form-control" curie-input ng-required="ctrl.mandatory" model="ctrl.model" ng-model="ctrl.curie" />
+<input id="{{ctrl.id}}" type="text" class="form-control" uri-input ng-required="ctrl.mandatory" model="ctrl.model" ng-model="ctrl.curie" />
 <button ng-show="formController.editing" type="button" class="btn btn-default btn-sm" ng-click="ctrl.selectUri()">{{('Choose ' + ctrl.type) | translate}}</button>
