Contextualize is defined by label

--- a/src/components/editor/propertyView.html
+++ b/src/components/editor/propertyView.html
@@ -52,7 +52,7 @@
       <non-editable title="Description" value="ctrl.predicate.comment"></non-editable>
       <non-editable title="Type" value="ctrl.predicate.rawType"></non-editable>
       <non-editable title="Range" value="ctrl.predicate.range"></non-editable>
-      <non-editable title="Is defined by" value="ctrl.predicate.modelId" link="ctrl.predicate.iowUrl()"></non-editable>
+      <non-editable title="{{ctrl.definedByTitle}}" value="ctrl.predicate.definedBy.id.compact" link="ctrl.predicate.iowUrl()"></non-editable>
       <subject-view subject="ctrl.predicate.subject"></subject-view>
     </uib-accordion-group>
   </uib-accordion>
