Internal group page link
Closes #301

--- a/src/components/group/group.html
+++ b/src/components/group/group.html
@@ -21,6 +21,8 @@
           <editable title="Description">
             <textarea id="groupComment" class="form-control" localized-input ng-model="ctrl.editableInEdit.comment"></textarea>
           </editable>
+
+          <non-editable title="Internal group page" value="ctrl.group.homepage" link="ctrl.group.homepage"></non-editable>
         </div>
 
         <div class="col-md-5 col-md-offset-1">
