--- a/src/components/form/errorMessages.html
+++ b/src/components/form/errorMessages.html
@@ -11,5 +11,8 @@
     <li ng-message="string">{{'String error' | translate}}</li>
     <li ng-message="length">{{'Length error' | translate}}</li>
     <li ng-message="prefix">{{'Prefix error' | translate}}</li>
+    <li ng-message="negative">{{'Negative error' | translate}}</li>
+    <li ng-message="greaterThanMax">{{'Greater than max error' | translate}}</li>
+    <li ng-message="lessThanMin">{{'Less than min error' | translate}}</li>
   </ul>
 </div>
