Filter for classes defined in profiles
Closes #312

--- a/src/components/editor/searchClassModal.html
+++ b/src/components/editor/searchClassModal.html
@@ -32,6 +32,10 @@
         <div class="checkbox">
           <label><input type="checkbox" ng-model="ctrl.showExcluded">{{'Show excluded' | translate}}</label>
         </div>
+
+        <div class="checkbox">
+          <label><input type="checkbox" ng-model="ctrl.showProfiles">{{'Show classes defined in profiles' | translate}}</label>
+        </div>
       </div>
 
       <div class="col-md-4 search-results">
